# urlshortener

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ae30fcd27725_make_expires_at_column_nullable.py  f573b82b028d_inital_migration.py
app/: config.py  constants.py  crud.py  database.py  enums.py  main.py  models.py  schemas.py  utils.py
app/routers/: qr.py  urls.py
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: ae30fcd27725_make_expires_at_column_nullable.py  d42e09372543_initial_migration.py
backend/app/routers/: urls.py
backend/tests/: test_main.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/[shortUrl]/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/check/[shortUrl]/: route.ts
frontend/app/api/qr/[shortUrl]/: route.ts
frontend/app/api/redirect/[shortUrl]/: route.ts
frontend/app/api/shorten/: route.ts
frontend/app/api/stats/[shortUrl]/: route.ts
frontend/app/api/urls/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/stats/[shortUrl]/: page.tsx
frontend/components/: features.tsx  footer.tsx  hero.tsx  navigation.tsx  qr-code-dialog.tsx  url-shortener.tsx
frontend/components/ui/: button.tsx  dialog.tsx
frontend/lib/: utils.ts
frontend/types/: api.ts
tests/: conftest.py  test_main.py
